# sdoc-rs-relations

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
demo/: README.md  json  rust
demo/sdoc-rs-html/: README.md  pyproject.toml
demo/sdoc-rs-html/examples/: rust
demo/sdoc-rs-html/examples/html/: relations.html  relations2.html
demo/sdoc-rs-relation-html/: README.md  pyproject.toml
python/sdoc-rs-html/: .gitignore  pyproject.toml
src/: html.rs  lib.rs  main.rs  sdoc.rs
src/html/: file.html  script.js
src/html/theme/: github_light_colorblind.css
src/parse/: mod.rs  relation.rs  tree.rs
tests/: item-relation.rs  json-compare.rs  paren-matching.rs  relation.rs  tag-name.rs  validation.rs
tests.old/test/: relation.rs
tests.todo/: relation-full-rs.todo  relation-quick.rs  relations.rs  relations.rs.json  relations1.rs  relations1.rs.json  relations2.rs  relations2.rs.json  relations3.rs  relations3.rs.json
tests/in/: relations.rs  relations1.rs  relations2.rs
tests/util/: README.md  frobnate.pl
util/fmt-html/: README.md  pyproject.toml
util/fmt-html/examples/html/: relations.html  relations1.html  relations2.html  relations3.html
util/fmt-html/src/fmt_html/: __init__.py
util/to-html/: README.md  pyproject.toml
util/to-html/examples/: json
