[package]
name = "strictdoc-rs"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Fernandes <andrew.fernandes@corten.systems>"]
description = "FIXME *** A command-line utility to help set PATH-type shell variables."
repository = "https://github.com/corten-systems/strictdoc-rs"
categories = ["command-line-utilities", "development-tools"]
license-file = "LICENSE.md"
readme = "FIXME *** README.md"

[dependencies]
anyhow = { version = "1.0.100" }
either = "1.15.0"
clap = { version = "4.5.48", features = ["derive"] }
nom = "8.0.0"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
syn = { version = "2.0.106", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
tempfile = "3.23.0"
