[package]
name = "sdoc-rs-relations"
version = "1.0.0"
edition = "2024"
authors = ["Andrew Fernandes <andrew.fernandes@corten.systems>"]
description = "Parse Rust source trees for StrictDoc `@relation` markers to yield JSON source code spans."
repository = "https://github.com/corten-systems/sdoc-rs-relations"
categories = ["command-line-utilities", "development-tools"]
license-file = "LICENSE.md"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.100" }
either = "1.15.0"
clap = { version = "4.5.48", features = ["derive"] }
nom = "8.0.0"
paste = "1.0.15"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
syn = { version = "2.0.106", features = ["extra-traits", "full", "visit"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
pretty_assertions = "1.4.1"
serde_json = "1.0.145"
