[project]
name = "sdoc-rs-html"
version = "1.0.0"
description = "Formats the output of `sdoc-rs-relations` to highlight the original source code."
keywords = ["strictdoc", "rust", "json", "html"]
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "Andrew Fernandes", email = "andrew.fernandes@corten.systems" }
]

requires-python = ">=3.13"

dependencies = [
    "Pygments>=2.19"
]

[project.scripts]
sdoc-rs-html = "sdoc_rs_html:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Repository = "https://github.com/yourusername/your-package"
